# SimulacaoTermoGrafica

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.070fca7  CMakeLists.txt.user.0948d96  CMakeLists.txt.user.2aafd07  CMakeLists.txt.user.2f2fe2e  CMakeLists.txt.user.36ddf8c  CMakeLists.txt.user.7677feb  Formulário Termografia (respostas).ods  GL_Interactor.h  Gizmo.cpp  Point.hpp  PrintBase.hpp  TrackBall.cpp  TrackBall.h  carotidS.ply  cube8.off  cube8.ply  main.cpp  printof.hpp  sapo2.ply  scrInteractor.cpp  scrInteractor.h  sem_parede.ply  sem_parede_12M.ply  sem_parede_opt.ply  sem_parede_t1.ply  siameseCat.ply  terreno_modelado.ply  topo_pedra.ply
VisOf/: PrintBase.hpp
VisOf/iterFunc/: CmdShowOfMesh.hpp  Command.hpp  MyCommands.hpp
includes/imgui/: imgui_impl_glfw.cpp  imgui_internal.h
includes/learnopengl/: Mycamera.h  camera.h  filesystem.h  shader.h  shader_m.h
of/: of.h  ofMesh.h  ofMesh2D.h  ofMeshSurface.h  ofMyCell.h  ofMyVertex3D.h  ofOffReader.h  ofTraits.h  ofVertexStarIteratorSurface.h  ofVertexStarIteratorSurfaceVertex.h
resources/sapo/: sapo_simplificado.obj.mtl  sapo_simplificado.ply
